youtube site change, grep pattern update
git-svn-id: svn://repo.hu/yget/trunk@19 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+2009-10-22
+	youtube swf args format changed, updated the grep pattern
 2009-09-07
 	fixing playlist downloads, updating the man page
 2009-08-22
