ycheck->yfmt, makefile update
git-svn-id: svn://repo.hu/yget/trunk@29 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/yget.1
+++ b/yget.1
@@ -5,6 +5,8 @@ yget \- download youtube videos
 yplay \- play youtube videos
 .br
 yurl \- print youtube download URLs and additional informations
+.br
+yfmt \- check available youtube video formats
 
 .SH SYNOPSIS
 .B yget
@@ -14,6 +16,9 @@ yurl \- print youtube download URLs and additional informations
 .RB URL
 .br
 .B yurl
+.RB URL
+.br
+.B yfmt
 .RB URL
 
 .SH DESCRIPTION
