--- a/yget.1
+++ b/yget.1
@@ -38,6 +38,10 @@ streams the video of the given youtube URL.
 .B yurl
 prints a key value pair list about the given youtube URL
 (download url, title, length, etc.).
+.P
+.B yfmt
+prints the available fmt arguments for a video URL and the file sizes.
+(Video format can be selected by adding '&fmt=[fmt number]' to a download url).
 
 .SH EXAMPLES
 yplay "youtube.com/watch?v=abcdefghijk&foo=123&bar=456"
@@ -60,8 +64,8 @@ the video or playlist id is used.
 .B yget
 and
 .B yplay
-try to get the H.264 encoded version ("&fmt=18"), with .mp4
-container format. For other versions use the output of
+try to get a medium resolution H.264 encoded version ("&fmt=18"), with .mp4
+container format. For other versions use the download url from
 .B yurl
 (possible fmt parameters are 0 5 6 13 17 18 22 34 35 37)
 .P
