--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+2010-05-12
+	rewrite due to format changes, yurl prints infos, yfmt prints fmt args
 2009-10-22
 	youtube swf args format changed, updated the grep pattern
 2009-09-07
