--- a/yget.1
+++ b/yget.1
@@ -41,7 +41,7 @@ prints a key value pair list about the given youtube URL
 .P
 .B yfmt
 prints the available fmt arguments for a video URL and the file sizes.
-(Video format can be selected by adding '&fmt=[fmt number]' to a download url).
+(Video format can be selected by adding "&fmt=[fmt number]" to a download url).
 
 .SH EXAMPLES
 yplay "youtube.com/watch?v=abcdefghijk&foo=123&bar=456"
