--- a/yget.1
+++ b/yget.1
@@ -44,11 +44,9 @@ prints the available fmt arguments for a video URL and the file sizes.
 (Video format can be selected by adding "&fmt=[fmt number]" to a download url).
 
 .SH EXAMPLES
-yplay "youtube.com/watch?v=abcdefghijk&foo=123&bar=456"
+yplay "youtube.co.uk/watch?v=abcdefghijk&foo=123&bar=456"
 .br
-yget http://www.youtube.com/watch?v=abcdefghijk
-.br
-yget youtube.co.uk/watch?v=abcdefghijk
+yget http://youtu.be/abcdefghijk
 .br
 yget http://youtube.com/v/abcdefghijk
 .br
@@ -64,13 +62,13 @@ the video or playlist id is used.
 .B yget
 and
 .B yplay
-try to get a medium resolution H.264 encoded version ("&fmt=18"), with .mp4
-container format. For other versions use the download url from
+try to get a 640x360 resolution H.264 encoded version (fmt=34), with .mp4
+container format. For other versions see the download url## from
 .B yurl
-(possible fmt parameters are 0 5 6 13 17 18 22 34 35 37)
+(possible fmt parameters are 5 6 13 17 18 22 34 35 37 43 45)
 .P
 Any recent mplayer or vlc should be able to stream the video from the
-URL printed by
+urls printed by
 .BR yurl .
 Seeking in the stream might not work.
 .B yplay
