--- a/yget.1
+++ b/yget.1
@@ -5,8 +5,6 @@ yget \- download youtube videos
 yplay \- play youtube videos
 .br
 yurl \- print youtube download URLs and additional informations
-.br
-yfmt \- check available youtube video formats
 
 .SH SYNOPSIS
 .B yget
@@ -16,9 +14,6 @@ yfmt \- check available youtube video formats
 .RB URL
 .br
 .B yurl
-.RB URL
-.br
-.B yfmt
 .RB URL
 
 .SH DESCRIPTION
@@ -38,15 +33,11 @@ streams the video of the given youtube URL.
 .B yurl
 prints a key value pair list about the given youtube URL
 (download url, title, length, etc.).
-.P
-.B yfmt
-prints the available fmt arguments for a video URL and the file sizes.
-(Video format can be selected by adding "&fmt=[fmt number]" to a download url).
 
 .SH EXAMPLES
 yplay "youtube.co.uk/watch?v=abcdefghijk&foo=123&bar=456"
 .br
-yget http://youtu.be/abcdefghijk
+yget youtu.be/abcdefghijk
 .br
 yget http://youtube.com/v/abcdefghijk
 .br
