--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2010-07-23
+	get_video?video_id=...&t=...&fmt=.. no longer works
+	using urls from url_fmt_map instead
 2010-05-12
 	rewrite due to format changes, yurl prints infos, yfmt prints fmt args
 2009-10-22
