fix debian control file
git-svn-id: svn://repo.hu/yget/trunk@46 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/yget.1
+++ b/yget.1
@@ -53,8 +53,8 @@ the video or playlist id is used.
 .B yget
 and
 .B yplay
-try to get a 640x360 resolution H.264 encoded version (fmt=34), with .mp4
-container format. For other versions see the download url## from
+try to get a 640x360 resolution H.264 encoded version (fmt=34).
+For other versions see the download url## from
 .B yurl
 (possible fmt parameters are 5 6 13 17 18 22 34 35 37 43 45)
 .P
