--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yget (2.2.1-r46) unstable; urgency=low
+
+  * fix control file (all architecture instead of any)
+
+ -- Szabolcs Nagy <nszabolcs@gmail.com>  Fri, 30 Jul 2010 17:35:13 +0200
+
 yget (2.2.1-r44) unstable; urgency=low
 
   * get_video?video_id=...&t=...&fmt=.. no longer works
