--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yget (2.2.2-r50) unstable; urgency=low
+
+  * parse new youtube format
+
+ -- Szabolcs Nagy <nszabolcs@gmail.com>  Thu, 03 Mar 2011 11:43:03 +0100
+
 yget (2.2.1-r46) unstable; urgency=low
 
   * fix control file (all architecture instead of any)
