fix playlist, new url_encoded_fmt_stream_map
git-svn-id: svn://repo.hu/yget/trunk@53 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/yget.1
+++ b/yget.1
@@ -39,7 +39,7 @@ yplay "youtube.co.uk/watch?v=abcdefghijk&foo=123&bar=456"
 .br
 yget youtu.be/abcdefghijk
 .br
-yget http://youtube.com/v/abcdefghijk
+yget abcdefghijk
 .br
 yget http://www.youtube.com/view_play_list?p=abcdefghijklmnop
 .br
