--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yget (2.2.3-r54) unstable; urgency=low
+
+  * parse new youtube format (url_encoded_fmt_stream_map)
+
+ -- Szabolcs Nagy <nszabolcs@gmail.com>  Thu, 04 Aug 2011 11:54:30 +0200
+
 yget (2.2.2-r50) unstable; urgency=low
 
   * parse new youtube format
