deb changelog for 2.3.2
git-svn-id: svn://repo.hu/yget/trunk@64 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 yget (2.3.1-r60) unstable; urgency=low
 
+  * fix playlist more
+
+ -- Szabolcs Nagy <nszabolcs@gmail.com>  Thu, 04 Aug 2011 13:06:10 +0200
+
+yget (2.3.1-r60) unstable; urgency=low
+
   * fix playlist
 
  -- Szabolcs Nagy <nszabolcs@gmail.com>  Thu, 04 Aug 2011 13:02:10 +0200
