deb changelog for tag 2.3.4
git-svn-id: svn://repo.hu/yget/trunk@71 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yget (2.3.4-r70) unstable; urgency=low
+
+  * bit better seeking (large mplayer cache)
+
+ -- Szabolcs Nagy <nszabolcs@gmail.com>  Thu, 19 Aug 2011 09:06:10 +0200
+
 yget (2.3.3-r67) unstable; urgency=low
 
   * fix video id recognition (#p/u/.. and v/id;params)
