--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yget (2.3.5-r73) unstable; urgency=low
+
+  * LC_ALL=C
+
+ -- Szabolcs Nagy <nszabolcs@gmail.com>  Thu, 19 Aug 2011 09:46:10 +0200
+
 yget (2.3.4-r70) unstable; urgency=low
 
   * bit better seeking (large mplayer cache)
