--- a/yget.1
+++ b/yget.1
@@ -56,7 +56,7 @@ and
 try to get a 640x360 resolution H.264 encoded version (fmt=34).
 For other versions see the download url## from
 .B yurl
-(possible fmt parameters are 5 6 13 17 18 22 34 35 37 43 45)
+(possible fmt parameters are 5 6 13 17 18 22 34 35 37 38 43 45)
 .P
 Any recent mplayer or vlc should be able to stream the video from the
 urls printed by
