yget and yplay update with -hq and -fmt options
git-svn-id: svn://repo.hu/yget/trunk@88 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/yget.1
+++ b/yget.1
@@ -8,24 +8,27 @@ yurl \- print youtube download URLs and additional informations
 
 .SH SYNOPSIS
 .B yget
-.RB URL \ [ prefix ]
+.RB URL \ [ \-hq | \-fmt\ fmtlist | \-prefix\ prefix ]
 .br
 .B yplay
-.RB URL
+.RB URL \ [ \-hq | \-fmt\ fmtlist ]
 .br
 .B yurl
 .RB URL
 
 .SH DESCRIPTION
 .B yget
-saves the video of the given youtube URL. The filename is the video id
-with the given prefix. The default prefix is "y". If the URL points to a
-playlist then
+saves the video of the given youtube URL. The filename is created from the
+given prefix, an ascii name and the video id. The default prefix is "y_".
+If the URL points to a playlist then
 .B yget
 will download all videos in it and save them with prefix "y[number]_".
 If the filename already exists then
 .B yget
 assumes that the video is unfinished and tries to continue the download.
+.P
+Higher quality video format can be selected by -hq and -fmt allows to
+select the format directly.
 .P
 .B yplay
 streams the video of the given youtube URL.
@@ -56,7 +59,8 @@ and
 try to get a 640x360 resolution H.264 encoded version (fmt=34).
 For other versions see the download url## from
 .B yurl
-(possible fmt parameters are 5 6 13 17 18 22 34 35 37 38 43 45)
+or use -fmt.
+(possible fmt parameters are 5 6 13 17 18 22 34 35 36 37 43 45 82 84 100 102)
 .P
 Any recent mplayer or vlc should be able to stream the video from the
 urls printed by
