--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yget (2.5.0-r91) unstable; urgency=low
+
+  * parse flashvars again
+  * update yget and yplay with new options
+
+ -- Szabolcs Nagy <nsz@port70.net>  Thu, 19 Jan 2012 20:48:25 +0100
+
 yget (2.4.0-r82) unstable; urgency=low
 
   * use PLAYER_CONFIG json instead of flashvars
