--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yget (2.5.1-r95) unstable; urgency=low
+
+  * verify age fix
+  * http redirect fix
+
+ -- Szabolcs Nagy <nsz@port70.net>  Sun, 22 Jan 2012 15:35:59 +0100
+
 yget (2.5.0-r91) unstable; urgency=low
 
   * parse flashvars again
