--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yget (2.5.7-r118) unstable; urgency=low
+
+  * minor playlist fix
+  * yurl parsing fix
+
+ -- Szabolcs Nagy <nsz@port70.net>  Thu, 14 Feb 2013 00:41:42 +0100
+
 yget (2.5.6-r113) unstable; urgency=low
 
   * fix playlist handling
