--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yget (2.5.9-r124) unstable; urgency=low
+
+  * yurl fix
+
+ -- Szabolcs Nagy <nsz@port70.net>  Thu, 21 Mar 2013 20:10:42 +0100
+
 yget (2.5.8-r120) unstable; urgency=low
 
   * yget uses curl -L
