--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yget (2.5.10-r127) unstable; urgency=low
+
+  * unavail msg
+  * view count fix
+
+ -- Szabolcs Nagy <nsz@port70.net>  Fri, 31 May 2013 16:30:08 +0200
+
 yget (2.5.9-r124) unstable; urgency=low
 
   * yurl fix
