--- a/yget.1
+++ b/yget.1
@@ -8,10 +8,10 @@ yurl \- print youtube download URLs and additional informations
 
 .SH SYNOPSIS
 .B yget
-.RB URL \ [ \-hq | \-fmt\ fmtlist | \-prefix\ prefix ]
+.RB URL \ [ \-hq | \-fmt\ fmtlist | \-sub\ lang | \-prefix\ prefix ]
 .br
 .B yplay
-.RB URL \ [ \-hq | \-fmt\ fmtlist ]
+.RB URL \ [ \-hq | \-fmt\ fmtlist | \-sub\ lang ]
 .br
 .B yurl
 .RB URL
@@ -27,9 +27,6 @@ If the filename already exists then
 .B yget
 assumes that the video is unfinished and tries to continue the download.
 .P
-Higher quality video format can be selected by -hq and -fmt allows to
-select the format directly.
-.P
 .B yplay
 streams the video of the given youtube URL.
 .P
@@ -37,10 +34,27 @@ streams the video of the given youtube URL.
 prints a key value pair list about the given youtube URL
 (download url, title, length, etc.).
 
+.SH OPTIONS
+.TP
+.B \-hq
+Tries to select the highest quality video format.
+.TP
+.BI \-fmt " fmtlist"
+Select the specified video format, the argument is a space separated
+list of numbers, the first available format will be downloaded.
+.TP
+.BI \-sub " lang"
+Download subtitle for the specified language (two letter language
+code is used, eg 'en', 'de', 'fr').
+.TP
+.BI \-prefix " prefix"
+Filename prefix used by
+.BR yget .
+
 .SH EXAMPLES
-yplay "youtube.co.uk/watch?v=abcdefghijk&foo=123&bar=456"
+yplay -hq -sub en "youtube.co.uk/watch?v=abcdefghijk&foo=123&bar=456"
 .br
-yget youtu.be/abcdefghijk
+yget -fmt '43 45' youtu.be/abcdefghijk
 .br
 yget abcdefghijk
 .br
@@ -61,6 +75,17 @@ For other versions see the download url## from
 .B yurl
 or use -fmt.
 (possible fmt parameters are 5 6 13 17 18 22 34 35 36 37 43 45 82 84 100 102)
+.P
+For the available subtitle languages, check ttlang in the output of
+.BR yurl .
+(the final timed text url is the ttsurl plus '&lang=xx' where xx is the
+two letter language code). The subtitle is in xml format that is
+recognized by mplayer.
+.B yget
+saves the subtitle under the same name as the video plus '.lang.sub' so
+mplayer loads it if -sub-fuzziness is at least 1,
+.B yplay
+stores the subtitle in /tmp/yplay.sub.
 .P
 Any recent mplayer or vlc should be able to stream the video from the
 urls printed by
