--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yget (2.8.0-r150) unstable; urgency=low
+
+  * fix js handling
+  * experimental subtitle handling
+
+ -- Szabolcs Nagy <nsz@port70.net>  Sun, 25 Oct 2015 15:45:13 +0000
+
 yget (2.7.1-r143) unstable; urgency=low
 
   * depend on external js interpreter
