--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yget (2.8.1-r153) unstable; urgency=low
+
+  * fix js signature function detection
+
+ -- Szabolcs Nagy <nsz@port70.net>  Sun, 15 Nov 2015 21:27:47 +0000
+
 yget (2.8.0-r150) unstable; urgency=low
 
   * fix js handling
